# rust-api-test

./: Cargo.toml
src/: main.rs
src/routes/: mod.rs  root.rs
src/utils/: make_route.rs  mod.rs
